hphp/test/slow/inout/tuple/tests/bad-call-13.php.expectf

Fatal error: Parameters marked inout must be contained in locals, vecs, dicts, keysets, and arrays in %s/bad-call-13.php on line 4
